// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`buildOSSFeatures returns features excluding reporting subfeatures 1`] = `
Array [
  Object {
    "id": "discover",
    "subFeatures": Array [
      Object {
        "name": "Short URLs",
        "privilegeGroups": Array [
          Object {
            "groupType": "independent",
            "privileges": Array [
              Object {
                "id": "url_create",
                "includeIn": "all",
                "name": "Create Short URLs",
                "savedObject": Object {
                  "all": Array [
                    "url",
                  ],
                  "read": Array [],
                },
                "ui": Array [
                  "createShortUrl",
                ],
              },
            ],
          },
        ],
      },
      Object {
        "name": "Store Search Sessions",
        "privilegeGroups": Array [
          Object {
            "groupType": "independent",
            "privileges": Array [
              Object {
                "api": Array [
                  "store_search_session",
                ],
                "id": "store_search_session",
                "includeIn": "all",
                "management": Object {
                  "kibana": Array [
                    "search_sessions",
                  ],
                },
                "name": "Store Search Sessions",
                "savedObject": Object {
                  "all": Array [
                    "search-session",
                  ],
                  "read": Array [],
                },
                "ui": Array [
                  "storeSearchSession",
                ],
              },
            ],
          },
        ],
      },
    ],
  },
  Object {
    "id": "visualize",
    "subFeatures": Array [
      Object {
        "name": "Short URLs",
        "privilegeGroups": Array [
          Object {
            "groupType": "independent",
            "privileges": Array [
              Object {
                "id": "url_create",
                "includeIn": "all",
                "name": "Create Short URLs",
                "savedObject": Object {
                  "all": Array [
                    "url",
                  ],
                  "read": Array [],
                },
                "ui": Array [
                  "createShortUrl",
                ],
              },
            ],
          },
        ],
      },
    ],
  },
  Object {
    "id": "dashboard",
    "subFeatures": Array [
      Object {
        "name": "Short URLs",
        "privilegeGroups": Array [
          Object {
            "groupType": "independent",
            "privileges": Array [
              Object {
                "id": "url_create",
                "includeIn": "all",
                "name": "Create Short URLs",
                "savedObject": Object {
                  "all": Array [
                    "url",
                  ],
                  "read": Array [],
                },
                "ui": Array [
                  "createShortUrl",
                ],
              },
            ],
          },
        ],
      },
      Object {
        "name": "Store Search Sessions",
        "privilegeGroups": Array [
          Object {
            "groupType": "independent",
            "privileges": Array [
              Object {
                "api": Array [
                  "store_search_session",
                ],
                "id": "store_search_session",
                "includeIn": "all",
                "management": Object {
                  "kibana": Array [
                    "search_sessions",
                  ],
                },
                "name": "Store Search Sessions",
                "savedObject": Object {
                  "all": Array [
                    "search-session",
                  ],
                  "read": Array [],
                },
                "ui": Array [
                  "storeSearchSession",
                ],
              },
            ],
          },
        ],
      },
    ],
  },
  Object {
    "id": "dev_tools",
    "subFeatures": undefined,
  },
  Object {
    "id": "advancedSettings",
    "subFeatures": undefined,
  },
  Object {
    "id": "indexPatterns",
    "subFeatures": undefined,
  },
  Object {
    "id": "savedObjectsManagement",
    "subFeatures": undefined,
  },
]
`;

exports[`buildOSSFeatures returns features including reporting subfeatures 1`] = `
Array [
  Object {
    "id": "discover",
    "subFeatures": Array [
      Object {
        "name": "Short URLs",
        "privilegeGroups": Array [
          Object {
            "groupType": "independent",
            "privileges": Array [
              Object {
                "id": "url_create",
                "includeIn": "all",
                "name": "Create Short URLs",
                "savedObject": Object {
                  "all": Array [
                    "url",
                  ],
                  "read": Array [],
                },
                "ui": Array [
                  "createShortUrl",
                ],
              },
            ],
          },
        ],
      },
      Object {
        "name": "Store Search Sessions",
        "privilegeGroups": Array [
          Object {
            "groupType": "independent",
            "privileges": Array [
              Object {
                "api": Array [
                  "store_search_session",
                ],
                "id": "store_search_session",
                "includeIn": "all",
                "management": Object {
                  "kibana": Array [
                    "search_sessions",
                  ],
                },
                "name": "Store Search Sessions",
                "savedObject": Object {
                  "all": Array [
                    "search-session",
                  ],
                  "read": Array [],
                },
                "ui": Array [
                  "storeSearchSession",
                ],
              },
            ],
          },
        ],
      },
      Object {
        "name": "Reporting",
        "privilegeGroups": Array [
          Object {
            "groupType": "independent",
            "privileges": Array [
              Object {
                "api": Array [
                  "generateReport",
                ],
                "id": "generate_report",
                "includeIn": "all",
                "management": Object {
                  "insightsAndAlerting": Array [
                    "reporting",
                  ],
                },
                "name": "Generate CSV reports",
                "savedObject": Object {
                  "all": Array [],
                  "read": Array [],
                },
                "ui": Array [
                  "generateCsv",
                ],
              },
            ],
          },
        ],
      },
    ],
  },
  Object {
    "id": "visualize",
    "subFeatures": Array [
      Object {
        "name": "Short URLs",
        "privilegeGroups": Array [
          Object {
            "groupType": "independent",
            "privileges": Array [
              Object {
                "id": "url_create",
                "includeIn": "all",
                "name": "Create Short URLs",
                "savedObject": Object {
                  "all": Array [
                    "url",
                  ],
                  "read": Array [],
                },
                "ui": Array [
                  "createShortUrl",
                ],
              },
            ],
          },
        ],
      },
      Object {
        "name": "Reporting",
        "privilegeGroups": Array [
          Object {
            "groupType": "independent",
            "privileges": Array [
              Object {
                "api": Array [
                  "generateReport",
                ],
                "id": "generate_report",
                "includeIn": "all",
                "management": Object {
                  "insightsAndAlerting": Array [
                    "reporting",
                  ],
                },
                "minimumLicense": "platinum",
                "name": "Generate PDF or PNG reports",
                "savedObject": Object {
                  "all": Array [],
                  "read": Array [],
                },
                "ui": Array [
                  "generateScreenshot",
                ],
              },
            ],
          },
        ],
      },
    ],
  },
  Object {
    "id": "dashboard",
    "subFeatures": Array [
      Object {
        "name": "Short URLs",
        "privilegeGroups": Array [
          Object {
            "groupType": "independent",
            "privileges": Array [
              Object {
                "id": "url_create",
                "includeIn": "all",
                "name": "Create Short URLs",
                "savedObject": Object {
                  "all": Array [
                    "url",
                  ],
                  "read": Array [],
                },
                "ui": Array [
                  "createShortUrl",
                ],
              },
            ],
          },
        ],
      },
      Object {
        "name": "Store Search Sessions",
        "privilegeGroups": Array [
          Object {
            "groupType": "independent",
            "privileges": Array [
              Object {
                "api": Array [
                  "store_search_session",
                ],
                "id": "store_search_session",
                "includeIn": "all",
                "management": Object {
                  "kibana": Array [
                    "search_sessions",
                  ],
                },
                "name": "Store Search Sessions",
                "savedObject": Object {
                  "all": Array [
                    "search-session",
                  ],
                  "read": Array [],
                },
                "ui": Array [
                  "storeSearchSession",
                ],
              },
            ],
          },
        ],
      },
      Object {
        "name": "Reporting",
        "privilegeGroups": Array [
          Object {
            "groupType": "independent",
            "privileges": Array [
              Object {
                "api": Array [
                  "generateReport",
                ],
                "id": "generate_report",
                "includeIn": "all",
                "management": Object {
                  "insightsAndAlerting": Array [
                    "reporting",
                  ],
                },
                "minimumLicense": "platinum",
                "name": "Generate PDF or PNG reports",
                "savedObject": Object {
                  "all": Array [],
                  "read": Array [],
                },
                "ui": Array [
                  "generateScreenshot",
                ],
              },
              Object {
                "api": Array [
                  "downloadCsv",
                ],
                "id": "download_csv_report",
                "includeIn": "all",
                "management": Object {
                  "insightsAndAlerting": Array [
                    "reporting",
                  ],
                },
                "name": "Download CSV reports from Saved Search panels",
                "savedObject": Object {
                  "all": Array [],
                  "read": Array [],
                },
                "ui": Array [
                  "downloadCsv",
                ],
              },
            ],
          },
        ],
      },
    ],
  },
  Object {
    "id": "dev_tools",
    "subFeatures": undefined,
  },
  Object {
    "id": "advancedSettings",
    "subFeatures": undefined,
  },
  Object {
    "id": "indexPatterns",
    "subFeatures": undefined,
  },
  Object {
    "id": "savedObjectsManagement",
    "subFeatures": undefined,
  },
]
`;
